--- a/src/Astoneti.Service.NewsWorker/Astoneti.Service.NewsWorker.csproj
+++ b/src/Astoneti.Service.NewsWorker/Astoneti.Service.NewsWorker.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Net.Http.Json" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
